--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body{
     padding:20px 80px;
     background:#E3E6F3;
     box-shadow:0 5px 15px rgba(0,0,0,0.06);
+    z-index:999;
+    position:sticky;
+    top:0;
+    left:0;
 }
 #navbar{
     display:flex;
@@ -78,5 +82,34 @@ body{
     bottom:-4px;
     left:20px;
 }
-
+/*home page*/
+#hero{
+    background-image:url("./img/hero4.png");
+    height:90vh;
+    width:100%;
+    background-size:cover;
+    background-position:top 25% right 0;
+    padding:0 80px;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:flex-start;
+}
+#hero h4{
+    padding-bottom:15px;
+}
+#hero h1{
+    color:#088178;
+}
+#hero button{
+    background-image:url("./img/button.png");
+    background-color:transparent;
+    color:#088178;
+    border:0;
+    padding:14px 80px 14px 65px;
+    background-repeat:no-repeat;
+    cursor:pointer;
+    font-weight:700;
+    font-size:15px;
+}
 
