--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body{
 }
 #feature .fe-box h6{
     display:inline-block;
-    paddding:9px 8px 6px 8px;
+    padding:9px 8px 6px 8px;
     line-height:1;
     border-radius:4px;
     color:#088178;
@@ -158,5 +158,73 @@ body{
 }
 #feature .fe-box:nth-child(6) h6{
     background-color:#fff2e5;
+}
+
+#product1{
+    text-align:center;
+}
+#product1 .pro-container{
+    display:flex;
+    justify-content:space-between;
+    padding-top:20px;
+    flex-wrap:wrap;
+}
+#product1 .pro{
+    width:23%;
+    min-width:250px;
+    padding:10px 12px;
+    border: 1px solid #cce7d0;
+    border-radius:25px;
+    cursor:pointer;
+    box-shadow:20px 20px 30px rgba(0,0,0,0.02);
+    margin:15px 0;
+    transition:0.2s ease;
+    position:relative;
+}
+
+#product1 .pro:hover{
+    box-shadow:20px 20px 30px rgba(0,0,0,0.06);
+    
+}
+#product1 .pro img{
+    width:100%;
+    border-radius:20px;
+}
+#product1 .pro .des{
+    text-align:start;
+    padding:10px 0;
+}
+#product1 .pro span{
+    color:#606063;
+    font-size:12px;
+
+}
+#product1 .pro .des h5{
+    padding-top:7px;
+    color:#1a1a1a;
+    font-size:14px;
+}
+#product1 .pro .des i{
+    font-size:12px;
+    color:rgba(243,181,25);
+}
+#product1 .pro .des h4{
+    padding-top:7px;
+    font-size:15px;
+    font-weight:700;
+    color:#088178;
+}
+#product1 .pro .cart{
+    width:40px;
+    height:40px;
+    line-height:40px;
+    border-radius:50px;
+    background-color:#e8f6ea;
+    color:#088178;
+    border:1px solid #cce7d0;
+    position:absolute;
+    bottom:20px;
+    right:10px;
+
 }
 
