--- a/style.css
+++ b/style.css
@@ -33,6 +33,18 @@ p{
 .section-m1{
     margin:40px 0;
 }
+button.normal{
+    font-size:14px;
+    font-width:600;
+    padding:15px 30px;
+    color:#000;
+    background-color:#fff;
+    border-radius:4px;
+    cursor:pointer;
+    border:none;
+    outline:none;
+    transition:0.2s;
+}
 body{
     width:100%;
 }
@@ -204,7 +216,7 @@ body{
     color:#1a1a1a;
     font-size:14px;
 }
-#product1 .pro .des i{
+#product1 .pro .star {
     font-size:12px;
     color:rgba(243,181,25);
 }
@@ -226,5 +238,172 @@ body{
     bottom:20px;
     right:10px;
 
+}
+#banner{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    background-image:url("img/banner/b2.jpg");
+    width:100%;
+    height:40vh;
+    background-size:cover;
+    background-position:center;
+
+}
+#banner h4{
+    color:#fff;
+    font-size:16px;
+}
+#banner h2{
+    color:#fff;
+    font-size:30px;
+    padding:10px 0;
+
+}
+#banner h2 span{
+    color:#ef3636;
+}
+#banner button:hover{
+    background:#088178;
+    color:#fff;
+}
+#sm-banner{
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    padding:120px;
+    
+}
+#sm-banner .banner-box {
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:flex-start;
+     background-image:url("img/banner/b17.jpg");
+    min-width:580px;
+    height:50vh;
+    background-size:cover;
+    background-position:center;
+    padding:30px;
+
+}
+#sm-banner .banner-box2{
+    background-image:url("img/banner/b10.jpg");
+}
+#sm-banner h4{
+    color:#fff;
+    font-size:20px;
+    font-weight:300;
+}
+#sm-banner h2{
+    color:#fff;
+    font-size:28px;
+    font-weight:800;
+}
+#sm-banner span{
+    color:#fff;
+    font-size:14px;
+    font-weight:500;
+    padding-bottom:15px;
+}
+button.white{
+    font-size:13px;
+    font-width:600;
+    padding:11px 18px;
+    color:#fff;
+    background-color:transparent;
+    cursor:pointer;
+    border:1px solid #fff;
+    outline:none;
+    transition:0.2s;
+}
+#sm-banner .banner-box:hover button{
+    background:#088178;
+    border:1px solid #088178;
+
+}
+#banner3{
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    padding:0 80px;
+}
+
+#banner3 .banner-box{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:flex-start;
+     background-image:url("img/banner/b7.jpg");
+    min-width:30%;
+    height:30vh;
+    background-size:cover;
+    background-position:center;
+    padding:20px;
+    margin-bottom:20px;
+}
+#banner3 .banner-box2{
+    background-image:url("img/banner/b4.jpg");    
+}
+#banner3 .banner-box3{
+    background-image:url("img/banner/b18.jpg");
+}
+#banner3 h2{
+    color:#fff;
+    font-weight:900;
+    font-size:22px;
+}
+#banner3 h3{
+    color:#ec544e;
+    font-weight:800;
+    font-size:15px;
+}
+
+#newsletter {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url("img/banner/b14.png");
+    background-repeat:no-repeat;
+    background-position:20% 30%;
+    background-color:#041e42;
+}
+#newsletter h4{
+    font-size:22px;
+    font-weight:700;
+    color:#fff;
+}
+#newsletter p{
+    font-size:14px;
+    font-weight:600;
+    color:#818ea0;
+}
+#newsletter p span{
+    color:#ffbd27;
+}
+#newsletter .form{
+    display:flex;
+    width:40%;
+}
+#newsletter input{
+    height:3.125rem;
+    padding:0 1.25em;
+    font-size:14px;
+    width:100%;
+    border:1px solid transparent;
+    border-radius:4px;
+    outline:none;
+    bottom-top-right-radius:0;
+    bottom-bottom-right-radius:0;
+}
+#newsletter button{
+    background-color:#088178;
+    color:#fff;
+    white-space:nowrap;
+    bottom-top-right-radius:0;
+    bottom-bottom-right-radius:0;
 }
 
