--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ footer .copyright{
 }
 
 /* shop page */
-#page-header{
+#page-header.shop-header{
     background-image:url("img/banner/b1.jpg");
     width:100%;
     height:40vh;
@@ -608,8 +608,43 @@ footer .copyright{
     color:#c9cbce;
     z-index:-9;
 }
+/* about page */
 
-
+#page-header.about-header{
+    background-image:url("img/about/banner.png");
+    width:100%;
+    height:40vh;
+    background-size:cover;
+    display:flex;
+    justify-content:center;
+    text-align:center;
+    flex-direction:column;
+    padding:14px;
+}
+#about-head{
+    display:flex;
+    align-items:center;
+}
+#about-head img{
+    width:50%;
+    height:auto;
+}
+#about-head div{
+    margin-left:40px;
+}
+#about-app{
+    text-align:center;
+}
+#about-app .video{
+    width:70%;
+    height:100%;
+    margin:30px auto 0 auto;
+}
+#about-app .video video{
+    width:100%;
+    height:100%;
+    border-radius:20px;
+}
 
 /* responsive for ipad */
 @media (max-width:799px){
@@ -777,6 +812,21 @@ footer .copyright{
         margin-bottom:30px;
     }
     #blog .blog-details {
+        width: 100%;
+    }
+    /* about page */
+
+    #about-head {
+        flex-direction:column;
+    }
+    #about-head img {
+        width: 100%;
+        margin-bottom:20px;
+    }
+    #about-head div {
+        margin-left: 0px;
+    }
+    #about-app .video {
         width: 100%;
     }
    
