--- a/style.css
+++ b/style.css
@@ -551,6 +551,14 @@ footer .copyright{
 
 #page-header.blog-header{
     background-image: url('img/banner/b19.jpg');
+    width:100%;
+    height:40vh;
+    background-size:cover;
+    display:flex;
+    justify-content:center;
+    text-align:center;
+    flex-direction:column;
+    padding:14px;
 }
 #blog{
     padding: 150px 150px 0 150px;
@@ -645,6 +653,101 @@ footer .copyright{
     height:100%;
     border-radius:20px;
 }
+/* contact page */
+
+#contact-details{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+}
+#contact-details .details{
+    width:40%;
+}
+#contact-details .details span,
+#form-details form span{
+    font-size:12px;
+}
+#contact-details .details h2,
+#form-details form h2{
+    font-size: 26px;
+    line-height:35px;
+    padding:20px 0;
+}
+#contact-details .details h3{
+    font-size: 16px;
+   padding-bottom:15px;
+}
+#contact-details .details li{
+    list-style:none;
+    display:flex;
+    padding:10px 0;
+}
+#contact-details .details li i{
+    font-size: 14px;
+    padding-right: 22px;
+}
+#contact-details .details li p{
+    margin:0;
+    font-size:14px;
+}
+#contact-details .map{
+    width:55%;
+    height:400px;
+}
+#contact-details .map iframe{
+    width:100%;
+    height:100%;
+}
+#form-details{
+    display:flex;
+    justify-content:space-between;
+    margin:30px;
+    padding:80px;
+    border: 1px solid #e1e1e1;
+}
+#form-details form{
+    width:65%;
+    display:flex;
+    flex-direction:column;
+    align-items: flex-start;
+}
+#form-details form input,
+#form-details form textarea{
+    width:100%;
+    padding:12px 15px;
+    outline:none;
+    margin-bottom:20px;
+    border: 1px solid #e1e1e1;
+}
+#form-details form button{
+    background-color:#088178;
+    color:#fff;
+}
+#form-details .people div{
+    padding-bottom: 25px;
+    display:flex;
+    align-items:flex-start;
+}
+#form-details .people div img{
+    width:65px;
+    height:65px;
+    object-fit:cover;
+    margin-right: 15px;
+}
+#form-details .people div p{
+    margin:0;
+    font-size:13px;
+    line-height:25px;
+}
+#form-details .people div p span{
+    display:block;
+    font-size:16px;
+    font-weight:600;
+    color:#000;    
+}
+
+
+
 
 /* responsive for ipad */
 @media (max-width:799px){
@@ -725,7 +828,26 @@ footer .copyright{
     #newsletter .form {
         width: 70%;
     }
-}
+    /* blog page */
+
+    #page-header.blog-header {
+        height: 40vh;
+        width: 100%;
+        justify-content:center;
+        text-align: center;
+        line-height: 54px;
+         padding: 150px;
+         font-size:46px;
+    }
+    }
+    /* contact page */
+    #form-details {
+        padding: 40px;
+    }
+    #form-details form {
+        width: 50%;
+    }
+
 /* responsive for iphone*/
 @media(max-width:477px){
     .section-p1 {
@@ -800,6 +922,18 @@ footer .copyright{
     #blog {
         padding: 100px 20px 0 20px;
     }
+    #page-header.blog-header {
+        width: 100%;
+        height: 40vh;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        padding: 14px;
+        
+       
+    }
     
     #blog .blog-box {
         display: flex;
@@ -829,5 +963,24 @@ footer .copyright{
     #about-app .video {
         width: 100%;
     }
-   
+    /* contact page */
+    #contact-details {
+         flex-direction:column;
+    }
+    #contact-details .details {
+        width: 100%;
+        margin-bottom:30px;
+    }
+    #contact-details .map {
+        width: 100%;
+    }
+    #form-details {
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap:wrap;
+    }
+    #form-details form {
+        width: 100%;
+        margin-bottom:30px;
+    }
 }
